--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ keywords = ["felucca"]
 include = ["felucca_package_example/*.cairo", "felucca_package_example/*/*.cairo"]
 
 [tool.poetry.dependencies]
-python = ">=3.7.11,<3.10"
+python = ">=3.7.11,<3.9"
 ecdsa = "^0.17.0"
 fastecdsa = "^2.2.3"
 sympy = "^1.10"
 cairo-nile = "^0.4.0"
 felucca = "^0.0.3"
+"starknet.py" = "^0.2.0-alpha.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
